--- a/data-analysis-admin/pom.xml
+++ b/data-analysis-admin/pom.xml
@@ -18,7 +18,11 @@
         <java.version>1.8</java.version>
     </properties>
     <dependencies>
-
+        <dependency>
+            <groupId>com.chen</groupId>
+            <artifactId>data-analysis-common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
